--- a/latex/project.Rnw
+++ b/latex/project.Rnw
@@ -1,9 +1,8 @@
 % Created: Tue Feb 17 15:26:53 CET 2015
 \documentclass[11pt,a4paper]{article}
 \usepackage[utf8]{inputenc} % Norwegian letters
-\usepackage{amsmath}
+\usepackage{amsmath,amsfonts,amssymb}
 \usepackage{bm}
-\usepackage{amsfonts}
 \usepackage{float}  % Used for minipage and stuff.
 \usepackage{wrapfig} % Wrap text around figure wrapfig [tab]
 \usepackage{graphicx}
