--- a/latex/mybib.bib
+++ b/latex/mybib.bib
@@ -23,6 +23,32 @@
   Volume                   = {4}
 }
 
+@Book{breiman,
+  Title                    = {Classification and Regression Trees},
+  Author                   = {Breiman, Leo and Friedman, Jerome and Olshen, Richard and Stone, Charles},
+  Publisher                = {Wadsworth International Group},
+  Year                     = {1984}
+}
+
+@Article{copas1983,
+  Title                    = {Regression, Prediction and Shrinkage},
+  Author                   = {Copas, J. B.},
+  Journal                  = {Journal of the Royal Statistical Society. Series B (Methodological)},
+  Year                     = {1983},
+  Number                   = {3},
+  Pages                    = {pp. 311-354},
+  Volume                   = {45},
+
+  Abstract                 = {The fit of a regression predictor to new data is nearly always worse than its fit to the original data. Anticipating this shrinkage leads to Stein-type predictors which, under certain assumptions, give a uniformly lower prediction mean squared error than least squares. Shrinkage can be particularly marked when stepwise fitting is used: the shrinkage is then closer to that expected of the full regression rather than of the subset regression actually fitted. Preshrunk predictors for selected subsets are proposed and tested on a number of practical examples. Both multiple and binary (logistic) regression models are considered.},
+  Copyright                = {Copyright © 1983 Royal Statistical Society},
+  ISSN                     = {00359246},
+  Jstor_articletype        = {research-article},
+  Jstor_formatteddate      = {1983},
+  Language                 = {English},
+  Publisher                = {Wiley for the Royal Statistical Society},
+  Url                      = {http://www.jstor.org/stable/2345402}
+}
+
 @Article{adaboostM1,
   Title                    = {A Decision-Theoretic Generalization of On-Line Learning and an Application to Boosting},
   Author                   = {Freund, Yoav and Schapire, Robert E},
@@ -34,7 +60,7 @@
   Pages                    = {119–139},
   Volume                   = {55},
 
-  __markedentry            = {[havakv:6]},
+  __markedentry            = {[havakv:]},
   Doi                      = {10.1006/jcss.1997.1504},
   ISSN                     = {0022-0000},
   Owner                    = {havakv},
@@ -44,30 +70,32 @@
 }
 
 @Article{friedman,
-  Title                    = {Greedy function approximation: a gradient boosting machine},
-  Author                   = {Friedman, Jerome H},
-  Journal                  = {Annals of statistics},
+  Title                    = {Greedy function approximation: A gradient boosting machine},
+  Author                   = {Friedman, Jerome H.},
+  Journal                  = {Ann. Statist.},
   Year                     = {2001},
-  Pages                    = {1189--1232},
 
-  Publisher                = {JSTOR},
-  Url                      = {http://statweb.stanford.edu/~jhf/ftp/trebst.pdf}
+  Month                    = {Oct},
+  Number                   = {5},
+  Pages                    = {1189–1232},
+  Volume                   = {29},
+
+  __markedentry            = {[havakv:6]},
+  Doi                      = {10.1214/aos/1013203451},
+  ISSN                     = {0090-5364},
+  Owner                    = {havakv},
+  Publisher                = {Institute of Mathematical Statistics},
+  Timestamp                = {2015.04.14},
+  Url                      = {http://dx.doi.org/10.1214/aos/1013203451}
 }
 
 @Book{modstat,
   Title                    = {The elements of statistical learning},
-  Author                   = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Hastie, T and Friedman, J and Tibshirani, R},
+  Author                   = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
   Publisher                = {Springer},
   Year                     = {2009},
   Number                   = {1},
   Volume                   = {2}
-}
-
-@Book{breiman,
-  Title                    = {Classification and Regression Trees},
-  Author                   = {Leo Breiman, Jerome Friedman, Richard Olshen, Charles Stone},
-  Publisher                = {Wadsworth International Group},
-  Year                     = {1984}
 }
 
 @Manual{stats,
