first draft of boosting

--- a/latex/bagging_random_forest.tex
+++ b/latex/bagging_random_forest.tex
@@ -1,5 +1,10 @@
+<<echo=FALSE, cache=FALSE>>=
+set_parent('./project.Rnw')
+@
+
 \section{Bagging}
 \label{sec:Bagging}
+Hei
 
 \section{Random forest}
 \label{sec:Random forest}
