--- a/latex/mybib.bib
+++ b/latex/mybib.bib
@@ -23,6 +23,33 @@
   Volume                   = {4}
 }
 
+@TechReport{breiman1999,
+  Title                    = {Using adaptive bagging to debias regressions},
+  Author                   = {Breiman, Leo},
+  Institution              = {Technical Report 547, Statistics Dept. UCB},
+  Year                     = {1999}
+}
+
+@Article{Breiman1996,
+  Title                    = {Bagging predictors},
+  Author                   = {Breiman, Leo},
+  Journal                  = {Mach Learn},
+  Year                     = {1996},
+
+  Month                    = {Aug},
+  Number                   = {2},
+  Pages                    = {123–140},
+  Volume                   = {24},
+
+  __markedentry            = {[havakv:6]},
+  Doi                      = {10.1007/bf00058655},
+  ISSN                     = {1573-0565},
+  Owner                    = {havakv},
+  Publisher                = {Springer Science + Business Media},
+  Timestamp                = {2015.04.15},
+  Url                      = {http://dx.doi.org/10.1007/BF00058655}
+}
+
 @Book{breiman,
   Title                    = {Classification and Regression Trees},
   Author                   = {Breiman, Leo and Friedman, Jerome and Olshen, Richard and Stone, Charles},
@@ -60,13 +87,41 @@
   Pages                    = {119–139},
   Volume                   = {55},
 
-  __markedentry            = {[havakv:]},
   Doi                      = {10.1006/jcss.1997.1504},
   ISSN                     = {0022-0000},
   Owner                    = {havakv},
   Publisher                = {Elsevier BV},
   Timestamp                = {2015.04.10},
   Url                      = {http://dx.doi.org/10.1006/jcss.1997.1504}
+}
+
+@InProceedings{freund1996,
+  Title                    = {Experiments with a new boosting algorithm},
+  Author                   = {Freund, Yoav and Schapire, Robert E and others},
+  Booktitle                = {ICML},
+  Year                     = {1996},
+  Pages                    = {148--156},
+  Volume                   = {96}
+}
+
+@Article{FriedmanStochBoost,
+  Title                    = {Stochastic gradient boosting},
+  Author                   = {Friedman, Jerome H.},
+  Journal                  = {Computational Statistics \& Data Analysis},
+  Year                     = {2002},
+
+  Month                    = {Feb},
+  Number                   = {4},
+  Pages                    = {367–378},
+  Volume                   = {38},
+
+  __markedentry            = {[havakv:]},
+  Doi                      = {10.1016/s0167-9473(01)00065-2},
+  ISSN                     = {0167-9473},
+  Owner                    = {havakv},
+  Publisher                = {Elsevier BV},
+  Timestamp                = {2015.04.15},
+  Url                      = {http://dx.doi.org/10.1016/S0167-9473(01)00065-2}
 }
 
 @Article{friedman,
@@ -80,7 +135,6 @@
   Pages                    = {1189–1232},
   Volume                   = {29},
 
-  __markedentry            = {[havakv:6]},
   Doi                      = {10.1214/aos/1013203451},
   ISSN                     = {0090-5364},
   Owner                    = {havakv},
